--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                 subscribe to our
                 <span class="newsletter-title__strong">Newsletter</span>
             </h2>
-            <form action="send.php" method="POST" class="subscribe newsletter__subscribe">
-                <input type="text" name="email" class="subscribe__input" placeholder="Your email address">
+            <form action="send.php" method="POST" class="form subscribe newsletter__subscribe">
+                <input type="email" name="email" required class="subscribe__input" placeholder="Your email address">
                 <button class="subscribe__button">Send</button>
             </form>
         </div>
@@ -409,17 +409,23 @@
                 <!-- /.footer__contact-details -->
                 <div class="footer__contact-form contact-form">
                     <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-                    <form action="send.php" method="POST" class="footer__form">
-                        <input type="text" 
+                    <form action="send.php" method="POST" class="footer__form form">
+                        <div class="footer__input-group">
+                            <input type="text" 
                             name="name" 
                             id="name" 
+                            required
                             class="footer__input" 
                             placeholder="Your Full Name*">
-                        <input type="text" 
+                        </div>
+                        <div class="footer__input-group">
+                            <input type="tel" 
                             name="phone" 
                             id="phone" 
-                            class="footer__input" 
+                            required
+                            class="footer__input phone" 
                             placeholder="Phone Number*">
+                        </div>
                         <textarea 
                             name="message" 
                             id="message" 
@@ -458,18 +464,22 @@
                 <img src="img/close.svg" alt="Icon: close">
             </a>
             <h3 class="modal__title modal__title--mt-0">Booking</h3>
-            <form action="send.php" method="POST" class="modal__form">
+            <form action="send.php" method="POST" class="modal__form form">
                 <input type="text" 
                     name="name" 
-                    class="modal__input" 
+                    class="modal__input"
+                    minlength="2"
+                    required 
                     placeholder="Your Full Name*">
-                <input type="text" 
+                <input type="tel" 
                     name="phone" 
-                    class="modal__input" 
+                    class="modal__input phone" 
+                    required 
                     placeholder="Phone Number*">
-                <input type="text" 
+                <input type="email" 
                     name="email" 
                     class="modal__input" 
+                    required 
                     placeholder="Email*">
                 <textarea 
                     name="message" 
@@ -487,7 +497,9 @@
     </div>
     <!-- /.modal -->
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/parallax.min.js"></script>    
+    <script src="js/parallax.min.js"></script>  
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
